# audioreach-pal

./: Android.mk  CONTRIBUTING.md  Makefile.am  Makefile.in  Pal.cpp  PalAR.cpp  PalAudioRoute.h  PalCommon.h  README.md  aclocal.m4  configure  configure.ac  ltmain.sh  pal.pc.in  sai.patch
device/: Android.bp  Makefile.am
device/A2B2Mic/: Android.bp  Android.mk
device/A2B2Mic/inc/: A2B2Mic.h
device/A2B2Mic/src/: A2B2Mic.cpp
device/A2B2Speaker/: Android.bp  Android.mk
device/A2B2Speaker/inc/: A2B2Speaker.h
device/A2B2Speaker/src/: A2B2Speaker.cpp
device/A2BMic/: Android.bp  Android.mk
device/A2BMic/inc/: A2BMic.h
device/A2BMic/src/: A2BMic.cpp
device/A2BSpeaker/: Android.bp  Android.mk
device/A2BSpeaker/inc/: A2BSpeaker.h
device/A2BSpeaker/src/: A2BSpeaker.cpp
device/Bluetooth/: Android.bp  Android.mk  Makefile.am  dev_bt.pc.in
device/Bluetooth/inc/: Bluetooth.h
device/Bluetooth/src/: Bluetooth.cpp
device/DisplayPort/: Android.bp  Android.mk  Makefile.am  dev_display.pc.in
device/DisplayPort/inc/: DisplayPort.h
device/DisplayPort/src/: DisplayPort.cpp
device/DummyDev/: Android.bp  Android.mk  Makefile.am  dev_dummy.pc.in
device/DummyDev/inc/: DummyDev.h
device/DummyDev/src/: DummyDev.cpp
device/ECRefDevice/: Android.bp  Android.mk  Makefile.am  dev_ec_ref.pc.in
device/ECRefDevice/inc/: ECRefDevice.h
device/ECRefDevice/src/: ECRefDevice.cpp
device/ExtEC/: Android.bp  Android.mk  Makefile.am  dev_ext_ec.pc.in
device/ExtEC/inc/: ExtEC.h
device/ExtEC/src/: ExtEC.cpp
device/FMDevice/: Android.bp  Android.mk  Makefile.am  dev_fm.pc.in
device/FMDevice/inc/: FMDevice.h
device/FMDevice/src/: FMDevice.cpp
device/Handset/: Android.bp  Android.mk  Makefile.am  dev_handset.pc.in
device/Handset/inc/: Handset.h
device/Handset/src/: Handset.cpp
device/HandsetMic/: Android.bp  Android.mk  Makefile.am  dev_handset_mic.pc.in
device/HandsetMic/inc/: HandsetMic.h
device/HandsetMic/src/: HandsetMic.cpp
device/HandsetVaMic/: Android.bp  Android.mk  Makefile.am  dev_handset_va.pc.in
device/HandsetVaMic/inc/: HandsetVaMic.h
device/HandsetVaMic/src/: HandsetVaMic.cpp
device/HapticsDev/: Android.bp  Android.mk  Makefile.am  dev_haptics.pc.in
device/HapticsDev/inc/: HapticsDev.h  HapticsDevProtection.h
device/HapticsDev/src/: HapticsDev.cpp  HapticsDevProtection.cpp
device/Headphone/: Android.bp  Android.mk  Makefile.am  dev_headphone.pc.in
device/Headphone/inc/: Headphone.h
device/Headphone/src/: Headphone.cpp
device/HeadsetMic/: Android.bp  Android.mk  Makefile.am  dev_headset_mic.pc.in
device/HeadsetMic/inc/: HeadsetMic.h
device/HeadsetMic/src/: HeadsetMic.cpp
device/HeadsetVaMic/: Android.bp  Android.mk  Makefile.am  dev_headset_va.pc.in
device/HeadsetVaMic/inc/: HeadsetVaMic.h
device/HeadsetVaMic/src/: HeadsetVaMic.cpp
device/HfpDownlink/: Android.bp  Android.mk
device/HfpDownlink/inc/: HfpDownlink.h
device/HfpUplink/: Android.bp  Android.mk
device/HfpUplink/inc/: HfpUplink.h
device/RTProxy/: Android.bp  Android.mk  Makefile.am  dev_proxy.pc.in
device/Speaker/: Android.bp  Android.mk  Makefile.am  dev_speaker.pc.in
device/SpeakerMic/: Android.bp  Android.mk  Makefile.am  dev_speaker_mic.pc.in
device/USBAudio/: Android.bp  Android.mk  Makefile.am  dev_usb.pc.in
device/UltrasoundDevice/: Android.bp  Android.mk  Makefile.am  dev_ultrasound.pc.in
device/inc/: Bluetooth.h  Device.h  DisplayPort.h  DummyDev.h  ECRefDevice.h  HapticsDevProtection.h  RTProxy.h  USBAudio.h
device/src/: Bluetooth.cpp  Device.cpp  DisplayPort.cpp  DummyDev.cpp  ECRefDevice.cpp  Handset.cpp  HapticsDev.cpp  HapticsDevProtection.cpp  RTProxy.cpp  Speaker.cpp  SpeakerProtection.cpp  USBAudio.cpp
inc/: Makefile.am  PalAR.h  PalARDefs.h  PalApi.h  PalDefs.h  PalMappings.h
plugins/PluginManager/: Android.bp  Android.mk  Makefile.am  plugin_manager.pc.in
plugins/codecs/: Makefile.am  bt_aptx.c  bt_base.c  bt_base.h  bt_ble.c  bt_ble.h  bt_bundle.c  bt_bundle.h  bt_intf.h  codecs.pc.in
plugins/configs/: Android.mk  Makefile.am  session_configs.pc.in
plugins/customva_intf/: Makefile.am  customva_intf.pc.in
plugins/vui_interface/: Makefile.am  configure.ac  vui_interface.pc.in
session/SessionAR/: Android.bp  Android.mk  Makefile.am  session_ar.pc.in
session/SessionAgm/: Android.bp  Android.mk  Makefile.am  session_agm.pc.in
session/SessionAlsaCompress/: Android.bp  Android.mk  Makefile.am  session_compress.pc.in
session/SessionAlsaPcm/: Android.bp  Android.mk  Makefile.am  session_pcm.pc.in
session/SessionAlsaVoice/: Android.bp  Android.mk  Makefile.am  session_voice.pc.in
stream/: Makefile.am
stream/StreamACD/: Android.bp  Android.mk  Makefile.am  stream_acd.pc.in
stream/StreamACDB/: Android.bp  Android.mk  Makefile.am  stream_acdb.pc.in
stream/StreamASR/: Android.bp  Android.mk  Makefile.am  stream_asr.pc.in
stream/StreamCallTranslation/: Android.mk  Makefile.am
stream/StreamCommon/: Android.bp  Android.mk  Makefile.am  stream_common.pc.in
stream/StreamCompress/: Android.bp  Android.mk  Makefile.am  stream_compress.pc.in
stream/StreamDummy/: Android.bp  Android.mk
stream/StreamHaptic/: Android.bp  Android.mk  Makefile.am  stream_haptics.pc.in
stream/StreamInCall/: Android.bp  Android.mk  Makefile.am  stream_incall.pc.in
stream/StreamNonTunnel/: Android.bp  Android.mk  Makefile.am  stream_nontunnel.pc.in
stream/StreamPCM/: Android.bp  Android.mk  Makefile.am  stream_pcm.pc.in
stream/StreamSoundTrigger/: Android.bp  Android.mk  Makefile.am  stream_soundtrigger.pc.in
stream/inc/: Stream.h  StreamACD.h  StreamACDB.h  StreamASR.h  StreamCommon.h  StreamCommonProxy.h  StreamCompress.h  StreamHaptics.h  StreamInCall.h  StreamPCM.h  StreamSensorPCMData.h  StreamSoundTrigger.h  StreamUltraSound.h
stream/src/: Stream.cpp  StreamACD.cpp  StreamACDB.cpp  StreamCommon.cpp  StreamCommonProxy.cpp  StreamCompress.cpp  StreamContextProxy.cpp  StreamHaptics.cpp  StreamInCall.cpp  StreamNonTunnel.cpp  StreamPCM.cpp  StreamSensorPCMData.cpp  StreamSoundTrigger.cpp  StreamUltraSound.cpp
(+562 files in other folders)
